<?xml version="1.0" encoding="UTF-8" ?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
            http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>org.rpgwizard</groupId>
    <artifactId>rpgwizard</artifactId>
    <version>1.7.0</version>
    <packaging>pom</packaging>
    <inceptionYear>2017</inceptionYear>
    <name>RPGWizard</name>

    <developers>
        <developer>
            <id>swordmaster2k</id>
            <name>Joshua Michael Daly</name>
            <timezone>Europe/Dublin</timezone>
        </developer>
    </developers>

    <repositories>
        <repository>
            <id>maven-central</id>
            <url>https://repo1.maven.org/maven2</url>
        </repository>
        <repository>
            <id>remote</id>
            <name>GitHub</name>
            <url>https://github.com/swordmaster2k/rpgwizard</url>
        </repository>
        <repository>
            <id>jfrog</id>
            <name>jfrog repo</name>
            <url>https://oss.jfrog.org/artifactory/oss-snapshot-local</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <modules>
        <module>core</module>
        <module>editor</module>
        <module>engine</module>
        <module>demo</module>
        <module>distribution</module>
        <module>documentation</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <java.version>11</java.version>
        <maven.compiler.version>3.8.1</maven.compiler.version>
        <maven.jar.version>2.6</maven.jar.version>
        <junit.version>4.12</junit.version>
        <json.version>20141113</json.version>
        <jsoup.version>1.10.2</jsoup.version>
        <commons-io.version>2.4</commons-io.version>
        <commons-lang.version>3.5</commons-lang.version>
        <license.plugin.version>2.11</license.plugin.version>
        <slf4j.version>1.7.22</slf4j.version>
        <logback.version>1.1.8</logback.version>
        <pf4j.version>3.2.0</pf4j.version>
        <assertj.version>3.5.0</assertj.version>
        <maven.formatter.version>2.11.0</maven.formatter.version>
        <maven.resources.version>3.0.2</maven.resources.version>
        <maven.clean.version>3.0.0</maven.clean.version>
        <maven.install.version>2.5.1</maven.install.version>
        <flatlaf.version>0.42</flatlaf.version>
        <substance.version>8.0.00</substance.version>
        <trident.version>1.5.00</trident.version>
        <jcef.version>67.0</jcef.version>
        <lombok.version>1.18.12</lombok.version>
        <jackson.version>2.11.1</jackson.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>${json.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>${jsoup.version}</version>
        </dependency>
        <dependency>
            <groupId>com.mycila</groupId>
            <artifactId>license-maven-plugin</artifactId>
            <version>${license.plugin.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- Logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang.version}</version>
        </dependency>

        <!-- Plugin System -->
        <dependency>
            <groupId>org.pf4j</groupId>
            <artifactId>pf4j</artifactId>
            <version>${pf4j.version}</version>
        </dependency>

        <!-- Automated Swing Testing -->
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-swing-junit</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>${license.plugin.version}</version>
                <executions>
                    <execution>
                        <id>format-headers</id>
                        <phase>process-sources</phase>
                        <configuration>
                            <header>com/mycila/maven/plugin/license/templates/MPL-2.txt</header>
                            <properties>
                                <owner>rpgwizard.org, some files forked from rpgtoolkit.net</owner>
                                <email>info@rpgwizard.org</email>
                            </properties>
                            <includes>
                                <include>src/main/**</include>
                                <include>src/test/**</include>
                                <include>engine-js/js/**</include>
                            </includes>
                            <excludes>
                                <exclude>engine-js/js/lib/**</exclude>
                                <exclude>src/main/resources/lib/**</exclude>
                                <exclude>src/test/resources/**</exclude>
                                <exclude>src/main/resources/program/templates/**</exclude>
                            </excludes>
                        </configuration>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>${maven.formatter.version}</version>
                <executions>
                    <execution>
                        <id>format-source</id>
                        <phase>validate</phase>
                        <configuration>
                            <configFile>${project.basedir}/eclipse-formatter-config.xml</configFile>
                            <directories>
                                <directory>core/src/main/java</directory>
                                <directory>editor/editor-ui/src/main/java</directory>
                                <directory>editor/pluginsystem/src/main/java</directory>
                                <directory>engine/src/main/java</directory>
                            </directories>
                        </configuration>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>${maven.clean.version}</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>distribution/builds/</directory>
                            <includes>
                                <include>**/*</include>
                            </includes>
                            <followSymlinks>false</followSymlinks>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            
            <!-- Install unmanaged dependencies  -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>${maven.install.version}</version>
                <inherited>false</inherited>
                <executions>
                    <execution>
                        <id>install-jcef</id>
                        <goals>
                            <goal>install-file</goal>
                        </goals>
                        <phase>validate</phase>
                        <configuration>
                            <groupId>org.cef</groupId>
                            <artifactId>jcef-win64</artifactId>
                            <version>${jcef.version}</version>
                            <packaging>jar</packaging>
                            <file>${basedir}/unmanaged_dependencies/jcef-win64.jar</file>
                            <generatePom>true</generatePom>
                        </configuration>
                    </execution>
                    <execution>
                        <id>install-substance</id>
                        <goals>
                            <goal>install-file</goal>
                        </goals>
                        <phase>validate</phase>
                        <configuration>
                            <groupId>org.pushingpixels.substance</groupId>
                            <artifactId>substance</artifactId>
                            <version>${substance.version}</version>
                            <packaging>jar</packaging>
                            <file>${basedir}/unmanaged_dependencies/substance-${substance.version}.jar</file>
                            <generatePom>true</generatePom>
                        </configuration>
                    </execution>
                    <execution>
                        <id>install-trident</id>
                        <goals>
                            <goal>install-file</goal>
                        </goals>
                        <phase>validate</phase>
                        <configuration>
                            <groupId>org.pushingpixels.substance</groupId>
                            <artifactId>trident</artifactId>
                            <version>${trident.version}</version>
                            <packaging>jar</packaging>
                            <file>${basedir}/unmanaged_dependencies/trident-${trident.version}.jar</file>
                            <generatePom>true</generatePom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    
</project>
